@@ -7,6 +7,8 @@
   It is an open question how that should be developed in relation to the
   external regression and compliance test suite. Maybe some really small
   example streams and decode tests will follow.
+- Finally silenced memory checkers about leaking memory from getlopt()
+  (main code overwriting values without freeing strdup() strings).
 - AUTORS now in UTF-8;-)
 - CMake build files in ports/cmake, as an alternative to create MSVC
   project files and the like (thanks to Vitaly Kirsanov)
